<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:stretchColumns="1">

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/begin_date" />

        <EditText
            android:id="@+id/etDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/pick_date"
            android:padding="10dp"></EditText>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/sort_order" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/sort_array"
            android:padding="10dp"></Spinner>
    </TableRow>

    <TableRow>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/news_desk_values" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp">

            <CheckBox
                android:id="@+id/cb_arts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts" />

            <CheckBox
                android:id="@+id/cbFashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion_style" />

            <CheckBox
                android:id="@+id/cbSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sports" />
        </LinearLayout>
    </TableRow>

    <TableRow
        android:gravity="center"
        android:padding="10dp">

        <Button
            android:id="@+id/btnSave"
            android:text="@string/save" />
    </TableRow>
</TableLayout>